--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -20,6 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "mongoose": "^8.12.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "validator": "^13.15.0"
   },
   "devDependencies": {
