Update google authentication for login and register

--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "amqplib": "^0.10.7",
     "bcryptjs": "^3.0.2",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
     "mongoose": "^8.12.2",
