--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -21,8 +21,10 @@
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
+    "mongo-sanitize": "^1.1.0",
     "mongoose": "^8.12.2",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "validator": "^13.15.0"
   },
